Redirect from HomePage to create EIObject.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,7 +10,7 @@
 
 
   <ion-fab right bottom>
-    <button ion-fab color="default" (click)="addExpense()">
+    <button ion-fab color="default" (click)="createEIObject()">
       <ion-icon name="add"></ion-icon>
     </button>
   </ion-fab>
